Fix weird overflow caused by glow, clean up comments

--- a/assets/less/appeals/nov25.less
+++ b/assets/less/appeals/nov25.less
@@ -73,8 +73,8 @@ html, body {
 
         @media (min-width: @xxl) {
             margin: auto;
-            width: 100rem;
-
+            max-width: 100rem;
+            width: 100%;
         }
     }
 
@@ -108,6 +108,10 @@ html, body {
             align-items: flex-start;
             flex: 0 0 calc((100% - var(--width-left-column)) - 2rem);
             margin-top: unset;
+
+            // Prevents the glow from causing horizontal scroll
+            // and weird background color.
+            overflow-x: hidden;
         }
 
         // The glow
@@ -138,7 +142,6 @@ html, body {
                 transform: none;
             }
         }
-
 
         // Placing inside #appeal-body for Nov25
         #appeal-heading {
@@ -195,21 +198,12 @@ html, body {
             border-radius: 0.75rem;
             box-shadow:
                 5px 3px 10px 0px rgba(0, 0, 0, 0.2);
-//                 12px 12px 32px rgba(255, 255, 255, 0.6),
-//                 24px 24px 64px rgba(19, 115, 217, 0.3);
-//                 // 5px 3px 10px 0px rgba(0, 0, 0, 0.2),
-//                 // 74px 64px 64px -60px rgba(19, 115, 217, 0.3));
-// //rgb(37, 75, 124)
             max-width: var(--appeal--letter-width-mobile);
             padding-bottom: 1rem;
             z-index: 2;
 
             @media (min-width: @sm) {
                 max-width: var(--appeal-content-width);
-            }
-
-            @media (min-width: @lg) {
-
             }
 
             #donate-button-container {
